--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "homepage": "https://github.com/rjrahul98/testPortalServer#readme",
   "dependencies": {
     "@types/express": "^4.16.1",
-    "express": "^4.16.4"
+    "@types/mongoose": "^5.3.12",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "mongoose": "^5.4.11",
+    "nodemon": "^1.18.10"
   }
 }
