--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   "dependencies": {
     "@types/express": "^4.16.1",
     "@types/mongoose": "^5.3.12",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.11",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "password-hash": "^1.2.2"
   }
 }
